Fix bug with registry, traverseSearcher

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,4 +4,6 @@
     * Implementation of ruleset, accept raw json and compile to rule predicates
 0.3.1 / 2017-06-17
     * Fix bug in testproc rule that caused it to fire when `test_proc` was not present on the config item/group
+0.3.2 / 2017-06-17
+    * Fix bug TraverseSearcher and fix an issue where Monitor predicate not registered
 
