--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,3 +20,7 @@
         * `linter.lint(yaml, linter.rules.all)` should change to `linter.lint(yaml, {rules: linter.rules.all})`
     * Add `linter.lintDefault()` which will lint with the recommended schema and rules
     * Tweaks to `replicated-lint` bin command in package.json
+
+0.6.1 / 2017-08-14
+    * Port config item "type" validation https://github.com/replicatedhq/libyaml/blob/master/validate.go#L376
+    * Port config item "when" validation https://github.com/replicatedhq/libyaml/blob/master/validate.go#L402
