--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,4 +30,8 @@
     * Port custom monitor `target` validation https://github.com/replicatedhq/libyaml/blob/master/validate.go#L487
 
 0.6.3 / 2017-08-14
-    * Port host requirements docker version validation https://github.com/replicatedhq/libyaml/blob/master/validate.go#L659 
+    * Port host requirements docker version validation https://github.com/replicatedhq/libyaml/blob/master/validate.go#L659
+
+0.6.4 / 2017-08-14
+    * Validate `kubernetes.requirements.server_version` is a valid semver range
+    * Validate `host_requirements.replicated_version` is a valid semver range
