Validate custom monitors display.label_scale
And also fix a few regexs to be `^(v1|v2|v3)$` instead of `^v1|v2|v3$`.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -71,3 +71,6 @@
 
 0.6.14 / 2017-08-21
     * Ensure `components.*.cluster` is either a boolean or a `{{repl ... }}` template
+
+0.6.15 / 2017-08-21
+    * Ensure `monitors.custom.*.display.label_scale` is a valid label scale expression
