--- a/CHANGELOG
+++ b/CHANGELOG
@@ -68,3 +68,6 @@
 
 0.6.13 / 2017-08-21
     * Ensure `custom_metrics.*.aggregation` is a valid graphite aggregation specification
+
+0.6.14 / 2017-08-21
+    * Ensure `components.*.cluster` is either a boolean or a `{{repl ... }}` template
