--- a/CHANGELOG
+++ b/CHANGELOG
@@ -89,3 +89,7 @@
 0.6.18 / 2017-08-21
     * Schema fixes for swarm-specific options
     * Fix regex for config item type field
+
+0.6.19 / 2017-08-21
+    * Fix schema definition to allow boolean literals for
+      `components.*.containers.*.volumes.*.is_ephemeral` and `.is_excluded_from_backup`
