--- a/CHANGELOG
+++ b/CHANGELOG
@@ -99,3 +99,6 @@
 
 0.6.21 / 2017-08-29
     * Add new `test_proc` command `ldap_config_validate`
+
+0.6.22 / 2017-09-05
+    * Fix an issue where `when` clauses on config groups weren't being validated
