Added checks relating to swarm secrets (swarm secrets must have names, must have values, and if they have labels the keys of the labels must not be the empty string) Added this to changelog along with public port replicated api version check Bumped version number in package.json

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -105,3 +105,7 @@
 
 0.6.23 / 2017-09-15
     * Tweak `mesg-yaml-empty` description, update docs generation.
+
+0.6.24 / 2017-09-19
+    * Ensure minimum Replicated API version of 2.8.0 when specifying a public port
+    * Ensure swarm secrets have a name and value and that any labels have keys that are not the empty string
