--- a/CHANGELOG
+++ b/CHANGELOG
@@ -116,3 +116,6 @@
 0.6.26 /2017-09-20
     * components.cluster_host_count and components.containers.cluster_instance_count uint properties are now checked to make sure they are actually uints
     * Schema fix for cluster_instance_count and cluster_host_count, all of their uint properties can now be strings or numbers
+
+0.6.27 /2017-09-19
+    * Check for swarm secrets label keys not "" now checks within an object, not an array
