--- a/CHANGELOG
+++ b/CHANGELOG
@@ -119,3 +119,6 @@
 
 0.6.27 /2017-09-19
     * Check for swarm secrets label keys not "" now checks within an object, not an array
+
+0.6.28 /2017-09-19
+    * Schema fix so that ports[].public_port and ports[].private_port can be ints or strings, instead of only strings
