--- a/CHANGELOG
+++ b/CHANGELOG
@@ -122,3 +122,6 @@
 
 0.6.28 /2017-09-19
     * Schema fix so that ports[].public_port and ports[].private_port can be ints or strings, instead of only strings
+
+0.6.29 /2017-09-19
+    * Check that custom_requirements have unique ids
