Validate volumes_from usage If a container is included via volumes_from, that other container must exist and must present a subscription for the including container, among other things

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -125,3 +125,6 @@
 
 0.6.29 /2017-09-19
     * Check that custom_requirements have unique ids
+
+0.6.30 /2017-09-20
+    * Validate `volumes_from` usage
