Verify that if a public port is set, only one instance can run per cluster host

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -135,3 +135,6 @@
 0.6.32 /2017-09-25
     * Accept and validate a greater variety of admin command formats
     * Added a new predicate, `Not`
+
+0.6.33 /2017-09-25
+    * Verifies that if a public port is set, only one instance can run per cluster host
