--- a/CHANGELOG
+++ b/CHANGELOG
@@ -142,3 +142,6 @@
 0.6.34 /2017-09-25
     * Added value checking to `components.*.containers.*.volumes.*.is_ephemeral` and `.is_excluded_from_backup`
     * Now can only be booleans literals, boolean strings, or templates
+
+0.6.35 /2017-09-29
+    * Fix `volumes_from` subscription validation
