--- a/CHANGELOG
+++ b/CHANGELOG
@@ -189,3 +189,10 @@
 
 0.8.4 /2017-10-30
     * Add `schema` and a few extra utility functions to package exports
+
+0.9.0 /2017-11-16
+    * Allow `--extraRules` to be passed as YAML (JSON rule sets will work the same)
+    * Add `replicated-lint verify-rules` command to verify the examples in custom rule sets
+    * Update `replicated-lint docs gen` to allow generating documentation for custom rule sets via `--extraRules` and `--excludeDefaults`
+    * Add projects/ folder, which will be a home for rule definitions for validation of non-replicated YAML documents
+    * Add a minimal projects/kubernetes/ example
