--- a/CHANGELOG
+++ b/CHANGELOG
@@ -186,3 +186,6 @@
     * Add option `--excludeDefaults`, `-x` to exclude the default rules+schema and only use rulesets specificed in `--extraRules`
     * Don't process.exit in reporters
     * Some minor refactoring around `validate` command and reporters
+
+0.8.4 /2017-10-30
+    * Add `schema` and a few extra utility functions to package exports
