--- a/CHANGELOG
+++ b/CHANGELOG
@@ -202,3 +202,6 @@
 
 0.9.2 /2017-12-14
     * `container.shm_size` should be an unsigned integer
+
+0.9.3 /2017-12-14
+    * Added `container.shm_size` tests and docs
