--- a/CHANGELOG
+++ b/CHANGELOG
@@ -205,3 +205,7 @@
 
 0.9.3 /2017-12-14
     * Added `container.shm_size` tests and docs
+
+0.9.3 /2017-12-14
+    * CLI allows passing `--schema` to set the path to an alternate JSONSchema document for validation
+    * Add `projects/replicated-entitlements` with a passing and failing example
