add rule and minimal schema for support bundle spec
The jsonschema is super minimal for now, has a `.*`: any for the spec keys
like `docker.ps` `docker.info`. Need to fill this out a bit more,
probably with codegen

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -212,3 +212,6 @@
 
 0.9.5 /2017-01-15
     * Fix bug in interface definition for `Test`
+
+0.9.6 /2017-01-15
+    * Add projects/replicated-supportbundle
