Handle `.` in JSONSchema property path, add full supportbundle schema

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -215,3 +215,7 @@
 
 0.9.6 /2017-01-15
     * Add projects/replicated-supportbundle
+
+0.10.0 /2017-01-22
+    * Fix a bug where objects with a `.` in property paths would not have `positions` returned when errors were found
+	* Expand Support bundle schema with examples and full property set
