Update monitors linting to allow default monitors on swarm
Add rules script to yarn (`yarn rules` tests rules only)
Bumped version, updated docs, updated changelog
Added .idea to gitignore

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -225,3 +225,6 @@
 
 0.10.2 /2017-01-30
     * Changes to Support Bundle custom rules
+
+0.10.3 /2017-02-02
+    * Allow default monitors on swarm scheduler
