--- a/CHANGELOG
+++ b/CHANGELOG
@@ -230,7 +230,10 @@
     * Allow default monitors on swarm scheduler
 
 0.10.4 /2018-02-21
-    * `components.*.containers.*.env_vars.*.is_excluded_from_support` can now be boolean literal, boolean string, or templates
+    * `components.*.containers.*.env_vars.*.is_excluded_from_support` can now be a boolean or a string
 
 0.10.5 /2018-02-21
     * Add `swarm/volumes` to `backup`
+
+0.10.5 /2018-02-21
+    * `components.*.containers.*.env_vars.*.is_excluded_from_support` must be a boolean literal, boolean string, or template
