--- a/CHANGELOG
+++ b/CHANGELOG
@@ -240,3 +240,6 @@
 
 0.10.7 /2018-04-05
     * Add `lifecycle.generate.use_defaults` to Support Bundle custom rules
+
+0.10.8 /2018-04-06
+    * Update .ts files to use updated Support Bundle rules
