--- a/CHANGELOG
+++ b/CHANGELOG
@@ -256,3 +256,6 @@
 
 0.11.3 /2018-05-01
     * Export `replicated-ship` project in module
+
+0.11.4 /2018-05-16
+    * Add info rule with additional help info for support sections
