--- a/CHANGELOG
+++ b/CHANGELOG
@@ -262,3 +262,6 @@
 
 0.11.5 /2018-05-21
     * Add support for github in `replicated-ship` project
+
+0.11.6 /2018-05-23
+    * Fix Ship `spec-require-*-script` rules to enforce folder path structure
