Add support for docker.container-cp via container labels

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -268,3 +268,7 @@
 
 0.11.7 /2018-05-24
     * Add support for new include_empty shared spec in support bundle project
+
+0.11.8 /2018-05-31
+    * Add support for docker cp from containers identified by labels in support bundle project
+
