--- a/CHANGELOG
+++ b/CHANGELOG
@@ -277,3 +277,6 @@
 
 0.11.10 /2018-06-07
     * Add kubernetes.logs to supportbundle schema
+
+0.11.11 /2018-06-15
+    * Add strategies property to backup
