--- a/CHANGELOG
+++ b/CHANGELOG
@@ -286,3 +286,11 @@
 
 0.11.13 /2018-06-20
     * Fixed `validate_json` test proc name
+
+0.11.14 /2018-06-21
+    * Add label filter for stack service logs and stack service logs to support bundle schema
+
+0.11.15 /2018-06-25
+    * Add Github asset validation to replicated-ship rules
+    * Regenerate replicated-supportbundle schema
+
