--- a/CHANGELOG
+++ b/CHANGELOG
@@ -300,6 +300,10 @@
     * Add typings to generated code
     * Add newlines to generated files
 
-0.12.1 /2018-06-27
+0.12.1 /2018-07-03
     * Add support for `assets.v1.helm.github` to `projects/replicated-ship`
+
+0.12.2 /2018-07-05
+    * Fix bug in `assets.v1.helm.github` schema in `projects/replicated-ship`
+
 
