--- a/CHANGELOG
+++ b/CHANGELOG
@@ -312,4 +312,7 @@
 0.12.4 /2018-07-09
     * Add `kubernetes.api-versions`, `kubernetes.cluster-info`, `kubernetes.resource-list` and `kubernetes.version` schemas in `projects/replicated-supportbundle`
 
+0.12.5 /2018-07-09
+    * Remove `include_empty` examples from specs in `projects/replicated-supportbundle`
+
 
