--- a/CHANGELOG
+++ b/CHANGELOG
@@ -312,4 +312,6 @@
 0.12.4 /2018-07-09
     * Add `kubernetes.api-versions`, `kubernetes.cluster-info`, `kubernetes.resource-list` and `kubernetes.version` schemas in `projects/replicated-supportbundle`
 
+0.12.5 /2018-07-09
+    * Add `assets.v1.web` schemas in `projects/replicated-ship`
 
