--- a/CHANGELOG
+++ b/CHANGELOG
@@ -326,3 +326,6 @@
 
 0.12.9 /2018-07-18
     * Update `assets.v1.web` schemas in `projects/replicated-ship`
+
+0.12.10 /2018-07-17
+    * Add `assets.v1.terraform` and `lifecycle.v1.terraform` to `projects/replicated-ship`
