--- a/CHANGELOG
+++ b/CHANGELOG
@@ -385,3 +385,5 @@
 0.13.13 2018-09-06
     * replicated-ship's `github` asset adds two new parameters `mode` and `strip_path`
 
+0.13.14 2018-09-06
+    * replicated-ship now supports `azure_aks` assets
