--- a/CHANGELOG
+++ b/CHANGELOG
@@ -387,3 +387,6 @@
 
 0.13.14 2018-09-06
     * replicated-ship now supports `azure_aks` assets
+
+0.13.15 2018-09-21
+    * identity provisioners now support `filter` parameter
