fix kubectl apply link

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -393,3 +393,6 @@
 
 0.13.16 2018-09-28
     * update replicated-ship property names "kubectlApply" and "azure_aks.resource_group_name"
+
+0.13.16 2018-09-28
+    * remove replicate-ship config.filters and config.test_proc properties
