--- a/CHANGELOG
+++ b/CHANGELOG
@@ -402,3 +402,6 @@
 
 0.13.19 2018-10-24
     * Add `kustomizeIntro` property to `replicated-ship`
+
+0.13.20 2018-10-24
+    * Add `--project` flag to `replicated-lint validate` command to pull schema+rules from another project
