--- a/CHANGELOG
+++ b/CHANGELOG
@@ -426,3 +426,6 @@
 
 0.14.4 2018-11-6
     * Updated missing generated files.
+
+0.14.5 2018-11-19
+    * Remove `test.sh` and `install.sh` recommendations for `replicated-ship` project
