Added more test_procs to the list

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -454,3 +454,6 @@
 
 0.14.13 2019-01-14
     * Add kubernetes shared filesystem config
+
+0.14.14 2019-01-28
+    * Added test procs: cert, random, echo, publicip, tcp_port_accept, http_status_code, system
