--- a/CHANGELOG
+++ b/CHANGELOG
@@ -480,3 +480,6 @@
 
 0.15.0 2019-05-07
     * Analyze v1 spec final
+
+0.15.1 2019-05-13
+    * Added platform `identity.enable_reset_request` to enable the reset request feature of the provisioning api.
