Support bundle lifecycle schema v1 prefix

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -489,3 +489,6 @@
 
 0.16.1 2019-06-07
     * Revert linter import change for backwards compatibility.
+
+0.17.0 2019-07-09
+    * Support bundle `lifecycle` not includes v1 prefix
